# finance-agent

./: .env.example  .gitignore  DATA_SOURCES.md  DESIGN.md  README.md  README_DATA_SOURCES.md  SUMMARY.md  docker-compose.milvus.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  setup_all.sh  start_milvus.sh  stop_milvus.sh
demos/: README.md
docs/: EXTERNAL_DATA_RAG.md  FINNHUB_API_SURVEY.md  design.md
finance_agent/: __init__.py  cli.py  config.py  download_models.py  registry.py
finance_agent/agent/: __init__.py  conversation.py  conversation_manager.py  loop.py  memory.py  planner.py  pydantic_agent.py  pydantic_runtime.py  synthesizer.py  verifier.py
finance_agent/capabilities/: __init__.py  base.py  filings.py  financials.py  llm.py  market_data.py  storage.py  web_search.py
finance_agent/providers/: __init__.py  filings_api.py  filings_cninfo.py  filings_cninfo_api.py  filings_finnhub.py  filings_local.py  financials_akshare.py  financials_api.py  financials_eastmoney.py  financials_finnhub.py  financials_local.py  llm_openai.py  market_akshare.py  market_api.py  market_eastmoney.py  market_finnhub.py  market_local.py  storage_sqlite.py  web_tavily.py
finance_agent/render/: __init__.py  writer.py
finance_agent/retrieval/: bm25.py  embedding_search.py  external_data_store.py  milvus_store.py  rerank.py  semantic_chunker.py  unified_retriever.py
scripts/: README.md  bootstrap_indices.py  download_all_data.py  download_filings_data.py  download_financial_reports.py  download_financials_data.py  download_market_data.py  download_stock_market_data.py  import_to_milvus.py
tests/: test_bm25.py  test_capabilities.py  test_evidence.py  test_provider_structure.py  test_registry.py  test_render_writer.py  test_storage_sqlite.py
tests/agent/: test_conversation.py  test_conversation_manager.py  test_memory.py
tests/retrieval/: __init__.py  test_embedding_search.py  (+2 more)
(+14 files in other folders)
